publish latihan 3 sampai 8

--- a/jquery/latihan2.html
+++ b/jquery/latihan2.html
@@ -5,7 +5,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 	<script>
 	$(document) .ready(function() {
-		$("p").dbclick(function(){
+		$("p") .dblclick(function(){
 			$(this) .hide();
 		});
 	});
@@ -16,6 +16,6 @@
 	<p>Informatika</p>
 	<p>Pemrograman WEB</p>
 	<p>Klik lagi disini</p>
-	
+
 </body>
 </html>
